--- a/css/styles.scss
+++ b/css/styles.scss
@@ -54,3 +54,17 @@ body{
     text-transform: capitalize;
     color: $C1;
 }
+.owl-titre {
+    padding-left: 15px;
+    font-family: 'Crimson Text',
+        serif;
+    text-transform: capitalize;
+    color: $C1;
+}
+.owl-comment {
+    padding-left: 30px;
+    font-family: 'Crimson Text',
+        serif;
+    font-style: italic;
+    color: $C1;
+}
