--- a/css/styles.scss
+++ b/css/styles.scss
@@ -64,7 +64,6 @@ body {
 
 .owl-arrow {
   position: absolute;
-  top: 50%;
   color: $C1;
   &-left {
     left: 15px;
@@ -72,4 +71,10 @@ body {
   &-right {
     right: 15px;
   }
+}
+.etape-caroussel-miniature {
+  float: right;
+  max-width: 100px;
+  padding-left: 5px;
+  padding-bottom: 5px;
 }
