--- a/css/styles.css
+++ b/css/styles.css
@@ -68,17 +68,24 @@ body {
   color: #35a1d4;
 }
 
-.owl-arrow {
+.owl-nav {
   position: absolute;
+  top: -35px;
+  width: 100%;
+  margin-left: -15px;
+}
+
+.owl-next {
+  float: right;
+}
+
+.owl-arrow {
+  position: relative;
   color: #35a1d4;
 }
 
-.owl-arrow-left {
-  left: 15px;
-}
-
 .owl-arrow-right {
-  right: 15px;
+  width: 100%;
 }
 
 .etape-caroussel-miniature {
@@ -86,5 +93,9 @@ body {
   max-width: 100px;
   padding-left: 5px;
   padding-bottom: 5px;
+}
+
+.footer {
+  background-color: #77bfe2;
 }
 /*# sourceMappingURL=styles.css.map */
