--- a/css/styles.scss
+++ b/css/styles.scss
@@ -89,4 +89,7 @@ body {
 }
 .footer {
   background-color: $C2;
+  background-image: url('../assets/bg.png');
+  background-size: 100%;
+  background-repeat: no-repeat;
 }
