--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@
       flex-wrap: wrap;
 }
 
-entete {
+.entete {
   background-color: #ffffff;
   background-image: url("../assets/bg.png");
   background-size: 100%;
