--- a/css/styles.scss
+++ b/css/styles.scss
@@ -16,7 +16,7 @@ $C5: #fce786;
     flex-wrap: wrap;
   }
 }
-entete {
+.entete {
   background-color: #ffffff;
   background-image: url('../assets/bg.png');
   background-size: 100%;
